four sizes available

--- a/example.html
+++ b/example.html
@@ -9,7 +9,22 @@
 
 <body>
 
+  <!-- simple usage -->
+
   <i class="icon feather activity"></i>
+
+  <!-- colors -->
+
+  <i class="icon feather activity black"></i>
+  <i class="icon feather activity white"></i>
+
+  <!-- sizes -->
+
+  <i class="icon feather activity extrasmall"></i>
+  <i class="icon feather activity small"></i>
+  <i class="icon feather activity medium"></i>
+  <i class="icon feather activity large"></i>
+  <i class="icon feather activity extralarge"></i>
 
 </body>
 
